[gd_scene load_steps=10 format=2]

[ext_resource path="res://1.5x/Asset 12@1.5x.png" type="Texture" id=1]
[ext_resource path="res://InteractionComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPC.gd" type="Script" id=3]
[ext_resource path="res://NPCTimer.gd" type="Script" id=4]
[ext_resource path="res://fonts/Lobster (1)/Lobster.tres" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.5, 34 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "pack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="DynamicFont" id=3]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="NPC" type="KinematicBody2D" groups=["NPCs"]]
show_behind_parent = true
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -1 )
shape = SubResource( 1 )

[node name="InteractionComponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 10, 0 )
collision_layer = 4
collision_mask = 56
interaction_parent = NodePath("..")

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/pack = SubResource( 2 )

[node name="NPCTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 4 )

[node name="PacksUI" type="RichTextLabel" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 1.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]1[/center]"
text = "1"
scroll_active = false

[connection signal="body_entered" from="InteractionComponent" to="InteractionComponent" method="_on_InteractionComponent_body_entered"]
[connection signal="body_exited" from="InteractionComponent" to="InteractionComponent" method="_on_InteractionComponent_body_exited"]
[connection signal="timeout" from="NPCTimer" to="." method="_on_NPCTimer_timeout"]
[connection signal="timeout" from="NPCTimer" to="NPCTimer" method="_on_NPCTimer_timeout"]
